fixed pin autofill css on dark mode

--- a/web/public/css/dark.scss
+++ b/web/public/css/dark.scss
@@ -295,6 +295,13 @@ body.theme--dark {
     box-shadow: 0 0 0 0.2rem rgba($txadmin-primary, .15);
   }
 
+  .form-control.is-valid, .was-validated .form-control:valid {
+    border-color: #2eb85c;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%232eb85c' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+}
+
   // ----- Tables
   .table {
     &, td {
